button click issue on mobile device & sidumenu responsiveness fixed

--- a/css/mtrl-buttons.css
+++ b/css/mtrl-buttons.css
@@ -84,10 +84,9 @@ a {
     margin: 0;
     padding: 0;
     text-decoration: none;
-    background: var(--light-color);
+    background-color: var(--light-color);
     font-family: sans-serif;
     font-size: 14px;
-    cursor: pointer;
     text-align: center;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -96,6 +95,18 @@ a {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+button:hover,
+a:hover {
+    cursor: pointer;
+}
+
+@media (hover: none) {
+    button:hover,
+    a:hover {
+        cursor: none;
+    }
 }
 
 button:focus {
@@ -115,7 +126,6 @@ button:focus {
     background-color: var(--button-background-color);
     border-color: var(--button-border-color);
 
-    cursor: pointer;
     position: relative;
     overflow: hidden;
     display: -webkit-inline-box;
